# owl-obo-rdf-data-wrangle

./: .gitignore  README.md  parse_ncit_owl.ipynb  pharmacologic_substance_obonet_ncit_explore.ipynb  pyproject.toml
