[tool.poetry]
name = "owl-obo-rdf-data-wrangle"
version = "0.1.0"
description = ""
authors = ["rcolinp <rcolinpiombino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
py-horned-owl = "^0.1.4"
obonet = "^0.3.0"
ontobio = "^2.7.10"
rdflib = "^6.0.1"
pronto = "^2.4.3"
Owlready = "^0.3.1"
PyMedTermino = "^0.3.3"
ontospy = "^1.9.8"
networkx = "^2.6.3"
neo4j = "^4.3.5"
py2neo = "^2021.2.0"
Owlready2 = "^0.34"
obonetx = "^0.3"
spacy = "^3.1.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = {extras = ["jupyter"], version = "^22.3.0"}
flake8 = "^3.9.2"
ipykernel = "^6.4.1"
ipywidgets = "^7.6.5"
notebook = "^6.4.10"
jupyterlab = "^3.1.12"
jedi = "0.18.0"
nbconvert = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
